syntax = "proto3";

option csharp_namespace = "Basket.API";

package basket;

service Basket {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
